--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,3 +1,23 @@
 spring:
   application:
     name: pos-dashboard-api
+
+  datasource:
+    url: jdbc:postgresql://localhost:5432/pos_dashboard_db
+    username: postgres
+    password: sandy207
+
+  jpa:
+    hibernate:
+      ddl-auto: validate
+    show-sql: true
+    properties:
+      hibernate:
+        format_sql: true
+
+  flyway:
+    enabled: true
+    locations: classpath:db/migration
+
+server:
+  port: 8080
