--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -9,7 +9,7 @@ spring:
 
   jpa:
     hibernate:
-      ddl-auto: validate
+      ddl-auto: update
     show-sql: true
     properties:
       hibernate:
@@ -21,3 +21,7 @@ spring:
 
 server:
   port: 8080
+
+jwt:
+  secret: pos-dashboard-super-secret
+  expiration: 86400000
